test/cli/test-generating-policy/clone/with-exceptions/generated-resources2.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-1
  namespace: staging
type: Opaque
--- 
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: test-secret-2
  namespace: staging
type: Opaque
---
apiVersion: v1
data:
  color: Ymx1ZQ==
kind: Secret
metadata:
  name: test-secret-3
  namespace: staging
type: Opaque
