test/cli/test-generating-policy/clone/with-exceptions/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: generate-secrets
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: sources
      expression: resource.List("v1", "secrets", "default")
  generate:
    - expression: generator.Apply(variables.nsName, [variables.sources])
