test/cli/test-generating-policy/clone/with-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
context: context.yaml
exceptions:
- exception.yaml
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generated-resources1.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: generate-secrets
  resources:
  - production
  result: pass
- generatedResource: generated-resources2.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: generate-secrets
  resources:
  - staging
  result: pass
- isGeneratingPolicy: true
  kind: Namespace
  policy: generate-secrets
  resources:
  - testing
  result: skip
